Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34170

Windows 7 theme change causes styling glitches

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.2.0 RC1
    • 5.1.0 , 5.1.1
    • GUI: Look'n'Feel
    • None
    • Windows 7
    • d8745d249fdeaf40b0c8309c6922f034f794ae70

    Description

      To reproduce this bug just switch Windows theme from “aero” to “high contrast #2” and back. It looks like Qt drawing engine doesn’t update some styling parameters so you will see green text on black background on “aero”-styled windows. Also you could try another theme switching combination ("aero" -> "classic" -> "aero", for example).

      Attachments

        1. glitches.png
          glitches.png
          12 kB
        2. qtbug34170.png
          qtbug34170.png
          66 kB
        3. qtbug34170.zip
          4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            yuri_q Yuri M
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes