Windows: Handle WM_SYSCOLORCHANGE as theme change.

Task-number: QTBUG-34170

Change-Id: I6ca11ab67c1e2752300fc167fb8f3c4f0d9ae2b8
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: d8745d249fdeaf40b0c8309c6922f034f794ae70 https://github.com/qt/qtbase/commit/d8745d249fdeaf40b0c8309c6922f034f794ae70